fix spacing on show

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -59,7 +59,7 @@
 }
 
 .hotel-info-container {
-  background-color: white;
+  // background-color: white;
   font-size: 15px;
   // border: 3px solid red;
 }
@@ -95,4 +95,8 @@
 
 .fa-heart {
   color: white;
+}
+
+#map {
+  width: 100%;
 }
